fix:完善了图表的一致性并且补充了图表说明文档以及对比实验的技术文档

--- a/vs_cardiff/新型红队智能体对比实验_技术文档.md
+++ b/vs_cardiff/新型红队智能体对比实验_技术文档.md
@@ -346,6 +346,27 @@ SleepDeceptiveRedAgent采用"假装Sleep + 突然攻击"的策略，旨在利用
 
 *注：负值表示Blue Agent的损失，绝对值越小表示防御效果越好*
 
+#### 图表解读
+
+为便于快速理解数据差异，我们基于表2和表3生成了两张对比图，分别位于：
+
+- `figures/zh/deceptive_comparison.png` 与 `figures/en/deceptive_comparison.png`
+- `figures/zh/sleep_deceptive_comparison.png` 与 `figures/en/sleep_deceptive_comparison.png`
+
+**图：DeceptiveRedAgent 场景下的平均奖励对比**
+
+- 横轴为测试步数（30/50/100），纵轴展示平均奖励及标准差。
+- 我们的模型在所有步数下损失均保持在个位数或十位数，Cardiff损失迅速扩大（-49.6），标准差也大幅增加。
+- 误差棒显示我们的模型波动显著小于Cardiff（±6~12 对比 ±12~38），印证表2中的稳定性结论。
+- 该图支持“我们模型对攻击模式切换更鲁棒，优势倍数为3.1×→4.2×→6.4×”这一关键发现。
+
+**图：SleepDeceptiveRedAgent 场景下的平均奖励绝对值（对数坐标）**
+
+- 为突出损失规模差异，纵轴采用对数刻度并展示平均奖励绝对值，柱体标签保留原始负值以提示真实奖励方向。
+- Cardiff在第50步和第100步的损失达到 -262.2 与 -974.2，呈指数级恶化；我们模型仍控制在 -18.7 与 -28.0。
+- 对数坐标清晰展现 14× 与 34.8× 的优势倍数；Cardiff 的标准差同样远大于我们的模型。
+- 该图直观证明了指纹识别防御在潜伏型欺骗面前的崩溃，以及实时威胁监控架构的领先优势。
+
 ---
 
 ## 4. 实验结果分析
